--- a/prepros.config
+++ b/prepros.config
@@ -933,8 +933,27 @@
       {
         "file": "#source/js/main.js",
         "config": {
+          "autoCompile": true,
+          "sourceMap": true,
           "customOutput": "assets\\js\\main.js",
-          "autoCompile": true
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
+        "file": "#source/js/sw.js",
+        "config": {
+          "autoCompile": true,
+          "sourceMap": true,
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "customOutput": "sw.js"
         }
       },
       {
@@ -950,6 +969,46 @@
         }
       },
       {
+        "file": "src/about.kit",
+        "config": {
+          "customOutput": "about.html"
+        }
+      },
+      {
+        "file": "src/index.kit",
+        "config": {
+          "customOutput": "index.html"
+        }
+      },
+      {
+        "file": "src/js/main.js",
+        "config": {
+          "customOutput": "assets\\js\\main.js",
+          "autoCompile": true,
+          "sourceMap": true
+        }
+      },
+      {
+        "file": "src/js/sw.js",
+        "config": {
+          "customOutput": "sw.js",
+          "sourceMap": true,
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "src/offlien.kit",
+        "config": {
+          "customOutput": "offline.html"
+        }
+      },
+      {
+        "file": "src/offline.kit",
+        "config": {
+          "customOutput": "offline.html"
+        }
+      },
+      {
         "file": "src/scss/main.sass",
         "config": {
           "tasks": {
@@ -962,11 +1021,7 @@
       {
         "file": "src/scss/main.scss",
         "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          }
+          "customOutput": "assets\\css\\main.css"
         }
       }
     ]
