--- a/prepros.config
+++ b/prepros.config
@@ -69,9 +69,7 @@
           "*.turf",
           "*.ts"
         ],
-        "exceptions": [
-          "src/scss/main.sass"
-        ]
+        "exceptions": []
       }
     },
     "uploader": {
@@ -212,7 +210,7 @@
       },
       "dart-sass": {
         "indentType": "space",
-        "allowWildcardImports": false,
+        "allowWildcardImports": true,
         "indentWidth": 2,
         "linefeed": "lf",
         "sourceMap": false
@@ -221,7 +219,7 @@
         "doubleQuoteAttributes": true
       },
       "jpg": {
-        "quality": 100
+        "quality": 90
       },
       "less": {
         "javascriptEnabled": false,
@@ -346,7 +344,7 @@
       },
       "node-sass": {
         "indentType": "space",
-        "allowWildcardImports": false,
+        "allowWildcardImports": true,
         "indentWidth": 2,
         "linefeed": "lf",
         "outputStyle": "expanded",
@@ -355,7 +353,7 @@
         "sourceComments": false
       },
       "png": {
-        "quality": 100
+        "quality": 90
       },
       "postcss-import": {
         "ignoreKeywords": [],
@@ -469,9 +467,6 @@
         "resolveJsonModule": false,
         "esModuleInterop": false,
         "useDefineForClassFields": false
-      },
-      "custom-2niwuicpsu": {
-        "command": "ejs-cli -b src/ \"**/*.ejs\" -e \"partials/\" -o ./ # {{input}} {{output}}"
       }
     },
     "fileTypes": {
@@ -507,6 +502,10 @@
             {
               "segment": "sass",
               "replaceWith": "css"
+            },
+            {
+              "segment": "src",
+              "replaceWith": "assets"
             }
           ]
         }
@@ -574,7 +573,7 @@
           ".css"
         ],
         "autoCompile": false,
-        "sourceMap": false,
+        "sourceMap": true,
         "tasks": [
           {
             "task": "copy",
@@ -611,7 +610,7 @@
           ".jsx"
         ],
         "autoCompile": false,
-        "sourceMap": false,
+        "sourceMap": true,
         "tasks": [
           {
             "task": "copy",
@@ -636,10 +635,16 @@
         ],
         "output": {
           "extension": ".js",
-          "type": "SOURCE_RELATIVE",
+          "type": "REPLACE_SEGMENTS",
           "relativePath": "",
           "suffix": "-dist",
-          "alwaysSuffix": false
+          "alwaysSuffix": false,
+          "segments": [
+            {
+              "segment": "src",
+              "replaceWith": "assets"
+            }
+          ]
         }
       },
       "stylus": {
@@ -818,13 +823,18 @@
         ],
         "output": {
           "extension": ".html",
-          "type": "REPLACE_SEGMENTS",
+          "type": "SOURCE_RELATIVE",
           "segments": [
             {
               "segment": "turf",
               "replaceWith": "html"
+            },
+            {
+              "segment": "view",
+              "replaceWith": "../"
             }
-          ]
+          ],
+          "relativePath": "../../"
         }
       },
       "typescript": {
@@ -849,7 +859,7 @@
           },
           {
             "task": "minify-js",
-            "enable": false
+            "enable": true
           }
         ],
         "output": {
@@ -863,6 +873,10 @@
             {
               "segment": "ts",
               "replaceWith": "js"
+            },
+            {
+              "segment": "src",
+              "replaceWith": "assets"
             }
           ]
         }
@@ -919,109 +933,28 @@
     },
     "files": [
       {
-        "file": "#source/about.kit",
-        "config": {
-          "customOutput": "about.html"
-        }
-      },
-      {
-        "file": "#source/index.kit",
-        "config": {
-          "customOutput": "index.html"
-        }
-      },
-      {
-        "file": "#source/js/main.js",
-        "config": {
-          "autoCompile": true,
-          "sourceMap": true,
-          "customOutput": "assets\\js\\main.js",
-          "tasks": {
-            "minify-js": {
-              "enable": false
-            }
-          }
-        }
-      },
-      {
-        "file": "#source/js/sw.js",
-        "config": {
-          "autoCompile": true,
-          "sourceMap": true,
-          "tasks": {
-            "minify-js": {
-              "enable": false
-            }
-          },
-          "customOutput": "sw.js"
-        }
-      },
-      {
-        "file": "#source/projects.kit",
-        "config": {
-          "customOutput": "projects.html"
-        }
-      },
-      {
-        "file": "#source/scss/main.scss",
-        "config": {
-          "customOutput": "assets\\css\\main.css"
-        }
-      },
-      {
-        "file": "src/about.kit",
-        "config": {
-          "customOutput": "about.html"
-        }
-      },
-      {
-        "file": "src/index.kit",
-        "config": {
-          "customOutput": "index.html"
-        }
-      },
-      {
         "file": "src/js/main.js",
         "config": {
-          "customOutput": "assets\\js\\main.js",
-          "autoCompile": true,
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "src/js/main.ts",
+        "config": {
           "sourceMap": true
         }
       },
       {
         "file": "src/js/sw.js",
         "config": {
-          "customOutput": "sw.js",
-          "sourceMap": true,
-          "autoCompile": true
+          "autoCompile": true,
+          "customOutput": "sw.js"
         }
       },
       {
-        "file": "src/offlien.kit",
+        "file": "src/js/sw.ts",
         "config": {
-          "customOutput": "offline.html"
-        }
-      },
-      {
-        "file": "src/offline.kit",
-        "config": {
-          "customOutput": "offline.html"
-        }
-      },
-      {
-        "file": "src/scss/main.sass",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          }
-        }
-      },
-      {
-        "file": "src/scss/main.scss",
-        "config": {
-          "customOutput": "assets\\css\\main.css"
+          "sourceMap": true
         }
       }
     ]
